<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XBeeConfigurator</string>
    
    <!-- Global Strings -->
    
    <string name="address">Address</string>
    
    <string name="type">Type</string>
    
    <string name="sensor">Sensor</string>
    
    <string name="motionSensor">Motion Sensor</string>
    
    <string name="luminanceSensor">Luminance Sensor</string>
    
    <string name="actuator">Actuator</string>
    
    <string name="actuatorMotion">Motion actuator</string>
    
    <string name="actuatorLuminance">Luminance actuator</string>
    
    <string name="router">Router</string>
    
    <string name="routerMotionSensor">Router motion sensor</string>
    
    <string name="routerLuminanceSensor">Router luminance sensor</string>
    
    <string name="coordinator">Coordinator</string>
    
    <string name="unknown">Unknown</string>
    
    <string name="deviceType">Device Type</string>
    
    <string name="OK">OK</string>
    
    
    <!-- Strings for XbeeConfigurationActivity -->
    
    <string name="signalStrength">Signal Strength</string>
    
    <string name="opPanId">Operating PAN ID</string>
    
    <string name="changePanID">Change PAN ID:</string>
    
    <string name="bDetect">Detect Devices</string>
    
    <string name="bRefresh">Refresh</string>
    
    <string name="associateThisAddressDevice">Associate this device:</string>
    
    <string name="DisassociateThisAddressDevice">Disassociate this device:</string>
    
    <string name="associateDeviceHint">Insert the device address to associate</string>
    
    <string name="disassociateDeviceHint">Insert the device address to disassociate</string>
    
    <string name="associate">Associate</string>
    
    <string name="disassociate">Disassociate</string>
    
    <string name="details">Details</string>
    
    <string name="changeLuminosityLevel">Set luminosity:</string>
    
    <string name="changeTime">Set time (minutes):</string>
    
    
    
    <!-- Strings for XBeeDetailsActivity -->
    
    <string name="listOfChilds">Child Devices:</string>
    
    <string name="listOfSensors">List Of Sensors:</string>
    
    <string name="listOfActuators">List of Actuators:</string>
    
    <string name="mySensor">My sensor:</string>
    
    <string name="myActuators">My actuators:</string>
    
		    
	<!-- Strings for AlertDialog -->
    
    <string name="coordNotFound">Coordinator not found!\nApplication will be terminated.</string>
    
    <string name="panIdOutOfBounds">PAN ID is not acceptable. Values must be between 1 and 50000.</string>
    
    <string name="textOutOfBounds">Value is too high, please insert lower values.</string>
    
    <string name="devicesNotDetected">Devices were not detected</string>
    
    <string name="setActuator">Are you sure you want to associate this actuator?</string>
    
    <string name="setSensor">Are you sure you want to associate to this sensor?</string>
    
    <string name="no">No</string>
    
    <string name="yes">Yes</string>
    
    <string name="deviceNotFound">Device not found</string>
    
    <string name="panIdNotChanged">The PAN ID was not be changed</string>
    
    <string name="removeActuator">Are you sure you want to desassasociate this actuator?</string>
    
    <string name="removeSensor">Are you sure you want to disassociate from this sensor?</string>
    
    <string name="addressNotAcceptable">The inserted address is not acceptable./nPlease insert letters between A &#8211; F and numbers between 0 &#8211; 9.</string>
    
    <string name="addressOutOfBounds">Address length ist too high, address must be 14 &#8211; 16 characters length.</string>
    
    <string name="addressShortLength">Address length is too short, address must be 14 &#8211; 16 characters length.</string>
    
    <string name="actuatorLimitReached">This sensor has already reached the maximum number of associated actuators.\nPlease remove one associated actuator.</string>
    
    <string name="sensorLimitReached">This actuator has already one sensor associated.\nPlease remove the associated sensor.</string>
    
    <string name="repeatedAddress">The address is already associated.</string>
    
        
    <!-- Strings for LoadTaskView -->
	
	<string name="Searching">Searching&#8230;</string>
	
	<string name="SearchingDevices">Searching for devices, please wait&#8230;</string>
	
	<string name="SearchingConnectedDevice">Searching for device, please wait&#8230;</string>
	
	<string name="Wait">Wait&#8230;</string>
	
	<string name="WaitForChange">Changes are being made, please wait&#8230;</string>
	
	<string name="WaitForRetrieveInformation">Informations about this sensor are being collected.</string>
	
	<!-- String for Connection Class -->
	
	<string name="VeryGood">Very Good</string>
	<string name="Good">Good</string>
	<string name="Medium">Medium</string>
	<string name="Weak">Weak</string>
	<string name="VeryWeak">Very Weak</string>
</resources>